// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildkite-graph Pipelines can be conditional dot 1`] = `
"digraph \\"a\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<a>\\" [ color = \\"grey\\" ];
  \\"<b>\\" [ color = \\"grey\\" ];
  \\"<c>\\" [ color = \\"grey\\" ];
  \\"<d>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Pipelines can be conditional dot 2`] = `
"digraph \\"a\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<a>\\" [ color = \\"grey\\" ];
  \\"<b>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Pipelines can be conditional json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "a",
    },
    Object {
      "command": "b",
    },
    Object {
      "command": "c",
    },
    Object {
      "command": "d",
    },
  ],
}
`;

exports[`buildkite-graph Pipelines can be conditional json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "a",
    },
    Object {
      "command": "b",
    },
  ],
}
`;

exports[`buildkite-graph Pipelines can be conditional yaml 1`] = `
"steps:
  - command: a
  - command: b
  - command: c
  - command: d
"
`;

exports[`buildkite-graph Pipelines can be conditional yaml 2`] = `
"steps:
  - command: a
  - command: b
"
`;

exports[`buildkite-graph Steps Command step addition dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command step addition dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command step addition dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
}
"
`;

exports[`buildkite-graph Steps Command step addition json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command step addition json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command step addition json 3`] = `
Object {
  "steps": Array [],
}
`;

exports[`buildkite-graph Steps Command step addition yaml 1`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command step addition yaml 2`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command step addition yaml 3`] = `
"steps: []
"
`;
